# catnip

./: .gitignore  LICENSE  Makefile  README.md  catnip.go  catnip_test.go  connection.go  connector.go  go.mod  rows.go  stmt.go  tx.go
.github/workflows/: ci.yml
native/: Cargo.toml
native/src/: lib.rs
